fix scroll jump issue

--- a/_sass/base/global.scss
+++ b/_sass/base/global.scss
@@ -34,6 +34,13 @@ body {
 .content-section {
   padding-top: 2rem;
   padding-bottom: 2rem;
+  h2,
+  h3,
+  h4,
+  h5,
+  h6 {
+    scroll-margin-top: 115px;
+  }
 }
 
 .content-section-heading {
